--- a/css/galleryStyle.css
+++ b/css/galleryStyle.css
@@ -119,13 +119,10 @@ h2 {
 
 
 
-
-
-
-
+/* gallery code below */
 
 .gallery-container {
-  height: 600px;
+  height: 500px;
 }
 
 img {
@@ -230,3 +227,18 @@ img {
     transition: all 0.35s;
   }
   
+
+  /* stars code canvas */
+
+  #banner {
+    position: relative; 
+    width: 800px;
+    height: 0px;
+}
+
+canvas {
+    background:#1c0522 ;
+    position: absolute;
+    top: 0 ;
+    left: 0;
+}
